methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:2: error: identifier expected but integer literal found.
def move(3: Int,versLAvant: Boolean){
         ^MethodsArgs:13: error: ':' expected but '}' found.
}
^