methods.args.MethodsArgs.scala.code
def move(3: Int,versLAvant: Boolean){
  
  if(verslAvant==true){
    avance(3)
  }
  else{
    recule()
  }
  return versLavant
}